<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModifArticle">

    <TextView
        android:id="@+id/textViewMessageModif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="100dp"
        android:text="@string/TextViewMessageModif"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editViewNomArticle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="Nom"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/EditViewNomArticle"
        app:layout_constraintBottom_toTopOf="@+id/editViewDesArticle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMessageModif" />

    <EditText
        android:id="@+id/editViewDesArticle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="Description"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/EditViewDesArticle"
        app:layout_constraintBottom_toTopOf="@+id/editViewPrixArticle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editViewNomArticle" />

    <EditText
        android:id="@+id/editViewQteArticle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="68dp"
        android:ems="10"
        android:hint="Quantité"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/EditViewQteArticle"
        app:layout_constraintBottom_toTopOf="@+id/buttonModifRetour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editViewPrixArticle" />

    <EditText
        android:id="@+id/editViewPrixArticle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="Prix"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/EditViewPrixArticle"
        app:layout_constraintBottom_toTopOf="@+id/editViewQteArticle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editViewDesArticle" />

    <Button
        android:id="@+id/buttonModifRetour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="68dp"
        android:text="Appliquer -> Retour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editViewQteArticle" />
</androidx.constraintlayout.widget.ConstraintLayout>